--- a/Presentation.Rmd
+++ b/Presentation.Rmd
@@ -1,35 +1,266 @@
 ---
-title: "My Final Research Project for ECON 452"
+title: "UMass Amherst Enrollment on Tuitiom"
 author: "Alain Duplan"
 date: "May 1, 2019"
 output: ioslides_presentation
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = FALSE)
+library(knitr)
+opts_chunk$set(echo = FALSE)
+library(tidyverse)
+library(readxl)
+library(randomForest)
+library(rlist)
+library(Metrics)
+library(TTR)
+library(gridExtra)
+library(xtable)
 ```
 
-## R Markdown
+## Introduction
 
-This is an R Markdown presentation. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
+- In recent years, UMass have been taking a lot of flack for over-enrolling students
+- This has caused many issues, including but not limitted to:
+ Forcing z-rooms and common rooms into triples and quads, Extending service hours for UHS and Dining services, Many students arent able to find rooms, Renovating and upgrading older buildings
+- But does this also affect tuition?
 
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document.
 
-## Slide with Bullets
+## What We Want to Find
 
-- Bullet 1
-- Bullet 2
-- Bullet 3
+- Does enrollment number ofthe University of Massachusetts, Amherst can be used to determine the cost of being a residential student?
 
-## Slide with R Output
+## The Data
 
-```{r cars, echo = TRUE}
-summary(cars)
+- The data was found through the The University Analytics and Institutional Research department and concatenated multiple reports to a sinlge simple data frame.
+
+```{r, out.width="50%", size="tiny"}
+UMASS <- read_excel("UMass Enrollment.xlsx")
+kable(head(UMASS[1:7]))
 ```
 
-## Slide with Plot
+## Deflating costs
 
-```{r pressure}
-plot(pressure)
+- Next we must deflate the cost so everything is in 1984 dollars
+```{r}
+inflation <- c(1.0 ,1.04, 1.06, 1.09, 1.14, 1.19, 1.26, 1.31, 1.35, 1.39, 1.43, 1.47, 1.51, 1.54, 1.57, 1.60, 1.66, 1.70, 1.73, 1.77, 1.82, 1.88, 1.94, 2.0, 2.07, 2.06, 2.10, 2.16, 2.21, 2.24, 2.28, 2.28, 2.31, 2.36, 2.42, 2.46)
+
+UMASS$`IN-STATE-ADJ` <- UMASS$`IN-STATE` / inflation
+UMASS$`OUT-STATE-ADJ` <- UMASS$`OUT-STATE` / inflation
+UMASS$`ROOM & BOARD ADJ` <- UMASS$`ROOM & BOARD` / inflation
+
+UMASS$ACCRATE <- UMASS$ACCEPTANCE / UMASS$APPLICATIONS 
+UMASS$ADMRATE <- UMASS$ADMISISSION / UMASS$ACCEPTANCE
+
+TUITION = (UMASS$`IN-STATE-ADJ` * .8 + UMASS$`OUT-STATE-ADJ` *.2)
+UMASS$COST = TUITION + UMASS$`ROOM & BOARD ADJ` *.8
+kable(head(UMASS[9:11]))
 ```
 
+## Getting Rates
+
+-Next we remove the effect of time by getting rate of change of costs and enrollment
+-We also calculate acceptence and admission rate
+
+
+```{r}
+ENROLLMENTRATE <- diff(UMASS$ENROLLMENT)/UMASS[-nrow(UMASS),]$ENROLLMENT
+ENROLLMENTRATE <- list.prepend(ENROLLMENTRATE, 0)
+UMASS$ENROLLMENTRATE <- ENROLLMENTRATE
+COSTRATE <- diff(UMASS$COST)/UMASS[-nrow(UMASS),]$COST
+COSTRATE <- list.prepend(COSTRATE, 0)
+UMASS$COSTRATE <- COSTRATE
+kable(head(UMASS[12:16]))
+```
+
+## Enrollment & Costs overtime
+
+```{r}
+par(mfrow= c(1,2))
+cost.vec <- as.numeric(as.vector(UMASS$COST))
+cost.ts <- ts(cost.vec, frequency = 1, start = c(1984, 1))
+cost.plot <- ts.plot(cost.ts, xlab = "Year", ylab = "Cost in $", main = "Adjusted cost")
+
+enrollment.vec <- as.numeric(as.vector(UMASS$ENROLLMENT))
+enrollment.ts <- ts(enrollment.vec, frequency = 1, start = c(1984, 1))
+enrollment.plot <- ts.plot(enrollment.ts, xlab = "Year", ylab = "Total Students", main = "Enrollment")
+
+```
+
+## Admission and acceptance rate over time
+
+```{r}
+par(mfrow= c(1,2))
+admission.vec <- na.omit(as.numeric(as.vector(UMASS$ADMISISSION)))
+admission.ts <- ts(admission.vec, frequency = 1, start = c(1987, 1))
+ts.plot(admission.ts, xlab = "Year", ylab = "Total Students", main = "Admission")
+
+accrate.vec <- na.omit(as.numeric(as.vector(UMASS$ACCRATE)))
+accrate.ts <- ts(accrate.vec, frequency = 1, start = c(1987, 1))
+ts.plot(accrate.ts, xlab = "Year", ylab = "Rate", main = "Acceptance Rate")
+
+
+```
+
+## Rate of change of cost and enrollment over time
+```{r}
+par(mfrow= c(1,2))
+costRATE.vec <- as.numeric(as.vector(UMASS$COSTRATE))
+costRATE.ts <- ts(costRATE.vec, frequency = 1, start = c(1984, 1))
+ts.plot(costRATE.ts, xlab = "Year", ylab = "Cost in $", main = "Adjusted cost rate of change")
+
+ENROLLMENTRATE.vec <- as.numeric(as.vector(UMASS$ENROLLMENTRATE))
+ENROLLMENTRATE.ts <- ts(ENROLLMENTRATE.vec, frequency = 1, start = c(1984, 1))
+ts.plot(ENROLLMENTRATE.ts, xlab = "Year", ylab = "Cost in $", main = "Enrollment rate of change")
+```
+
+## What happened in 1995?
+- We can see in all the graphs a dip in performance.
+- This was caused by political & racial tumoil caused by the 1992 ALANA agrreement leading to Goddell sit in 1997
+- Since we cannot simply ignore these years, we make it a dummy variable
+```{r, echo=TRUE}
+TURMOIL <- UMASS$YEAR
+TURMOIL[1:36] <- 0
+TURMOIL[11:15] <- 1
+UMASS$TURMOIL <- TURMOIL
+```
+
+## Modeling
+
+- We will use a linear regression model and a random forest model using turmoil, enrollment, rate of change of enrollment, acceptance rate, admission rate, and rate of change in enrollment to predict rate of change in costs.
+- We train on first 30 years and test on the last 6
+```{r}
+train <- UMASS[1:30,]
+test <- UMASS[31:36,] #we simply will use the last 6 years to test our data
+test.ts <- ts((as.numeric(as.vector(test$COSTRATE))), frequency = 1, start = c(2014, 1))
+train.ts <- ts((as.numeric(as.vector(train$COSTRATE))), frequency = 1, start = c(1984, 1))
+```
+
+## Linear regession
+- After running a step function on all the variables, we find that turmoil and enrollment rate of change are the most significant.
+- COSTRATE = .052595  -(.062254)TURMOIL -(.838094)ENROLLMENTRATE
+```{r, results="hide"}
+train.cost <- na.omit(train[,c(12,13,15,16,17)]) # selecting only variables we need, we only will use rates to reduce the effect of time 
+cost.lm <- lm(COSTRATE ~., data = train.cost)
+step(cost.lm)
+```
+
+
+```{r}
+cost.step <- lm(formula = COSTRATE ~ ENROLLMENTRATE + TURMOIL, data = train.cost)
+kable(xtable(cost.step))
+```
+
+## Predicting with linear model
+
+```{r}
+step.train <- predict(cost.step, train)
+step.train.ts <- ts(step.train, frequency = 1, start = c(1984, 1))
+
+ts.plot(step.train.ts, train.ts, xlab="Year", ylab="Rate of Change", main="Rate of Change Over Time" , gpars = list(col=rainbow(2))) 
+#legend("topright", legend = c("predictions", "true"), col = rainbow((2)), lty = 1)
+```
+
+## Residuals
+- RMSE = 3.86%
+- Total error = 14%
+
+```{r}
+par(mfrow= c(1,2))
+step.rmse <- rmse(train$COSTRATE, step.train)
+
+
+step.res = step.train - train$COSTRATE
+step.sum <- sum(step.res)
+
+step.res.ts <- ts((as.numeric(as.vector(step.res))), frequency = 1, start = c(1984, 1))
+ts.plot(step.res.ts, xlab = "Year", ylab = "Cost in $", main = "Adjusted cost rate of change")
+
+hist(step.res, xlab = "Year", ylab = "Cost in $", main = "Adjusted cost rate of change")
+```
+
+## Random Forest
+-Using 4 splits, 500 trees and seed set to 1234
+
+```{r}
+set.seed(1234)
+cost.forest <- randomForest(COSTRATE ~.,data = train.cost, mtry  = 4, importance = T)
+varImpPlot(cost.forest, main = "Random Foresting Predictors")
+
+```
+
+## Predicting with Random Forest
+
+```{r}
+tree.pred <- predict(cost.forest, train)
+tree.true.ts <- ts(tree.pred, frequency = 1, start = c(1984, 1))
+
+ts.plot(tree.true.ts, train.ts, xlab="Year", ylab="Rate of Change", main="Rate of Change Over Time", gpars = list(col=rainbow(2))) 
+#legend("topright", legend = c("predictions", "true"), col = rainbow((2)), lty = 1)
+```
+
+## Residuals
+- RMSE = 2.2%
+- Total Error = 2.5%
+```{r}
+par(mfrow=c(1,2))
+tree.rmse <- rmse(train$COSTRATE[4:30], tree.pred[4:30])
+
+
+tree.res <- tree.pred[4:30] - train$COSTRATE[4:30]
+tree.sum <- sum(tree.res)
+
+
+tree.res.ts <- ts((as.numeric(as.vector(tree.res))), frequency = 1, start = c(1987, 1))
+ts.plot(tree.res.ts, xlab = "Year", ylab = "Cost in $", main = "Adjusted cost rate of change")
+
+hist(tree.res, xlab = "Year", ylab = "Cost in $", main = "Adjusted cost rate of change")
+```
+
+## Testing
+
+```{r}
+par(mfrow=c(1,2))
+step.pred <- predict(cost.step, test)
+step.ts <- ts(step.pred, frequency = 1, start = c(2014, 1))
+
+
+ts.plot(step.ts, test.ts, xlab = "Year", ylab = "Cost in $", main = "Linear Regression", gpars = list(col=rainbow(2))) 
+#legend("topleft", legend = c("pred", "true"), col = rainbow((2)), lty = 1)
+
+tree.test.pred <- predict(cost.forest, test)
+tree.ts <- ts(tree.test.pred, frequency = 1, start = c(2014, 1))
+
+ts.plot(tree.ts, test.ts, xlab = "Year", ylab = "Cost in $", main = "Random Foresting", gpars = list(col=rainbow(2))) 
+#legend("topleft", legend = c("pred", "true"), col = rainbow((2)), lty = 1)
+```
+
+##  Residuals
+-Linear Model: RMSE = 4.17%, Total = 13.54
+-Random Forest: RMSE  + 5.86, Total = 14.66
+```{r}
+par(mfrow=c(1,2))
+tree.test.rmse <- rmse(train$COSTRATE, tree.test.pred)
+
+tree.test.res = tree.test.pred - test$COSTRATE
+tree.res.sum <- sum(tree.test.res)
+
+
+tree.test.res.ts <- ts((as.numeric(as.vector(tree.test.res))), frequency = 1, start = c(2014, 1))
+ts.plot(tree.test.res.ts, xlab = "Year", ylab = "Cost in $", main = "Random Forest")
+step.test.rmse <- rmse(test$COSTRATE, step.pred)
+
+step.test.res = step.pred - test$COSTRATE
+
+sum.step <- sum(step.test.res)
+
+step.test.res.ts <- ts((as.numeric(as.vector(step.test.res))), frequency = 1, start = c(2014, 1))
+ts.plot(step.test.res.ts, xlab = "Year", ylab = "Cost in $", main= "Linear Model")
+```
+
+## Conclusion
+- There is a a relationship and we were able to predict within a small margin
+- Not a direct causation
+- Other factors
+
+## Closing notes
